--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install pytest ruff mypy
+        # Install test/runtime deps needed for unit tests
+        pip install pytest ruff mypy fastapi[all] numpy psutil aiofiles httpx
 
     - name: Run ruff (lint)
       run: |
